# RCC

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
include/: drawing.h  drawing.hpp  game_of_life.h  game_of_life.hpp
ir_gen/: Readme.md  a.out  irgen.cpp  irgen.ll
pass/: llpass.cpp  log.c  stats.py
src/: app.c  app.cpp  app.ll  main.c  main.cpp
